# memlog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
cli/: memlog
cli/memlog-witness/src/: main.rs
driver/: Kbuild  Kconfig  Makefile  memlog.c
include/uapi/linux/: memlog.h
libmemlog/src/: lib.rs  lock.rs  mode_contract.rs  persistence.rs
scripts/: memlog-mode-repair.sh  memlog-mode-verify.sh
tests/: mode_contract_test.rs  persistence.rs  test_basic.sh
